--- a/thesis.tex
+++ b/thesis.tex
@@ -40,6 +40,11 @@
 \usepackage{siunitx}
 \usepackage{amsfonts,amsthm,amsmath}
 \usepackage{enumitem}
+\usepackage{algorithm}
+\usepackage[perpage]{footmisc}
+% \usepackage{algorithmic}
+\usepackage[algo2e]{algorithm2e}
+\usepackage{soul}
 % \usepackage[belowskip=-15pt,aboveskip=0pt]{caption}
 \usepackage[skip=2pt]{caption} % example skip set to 2pt
 %\usepackage[belowskip=0pt,aboveskip=0pt]{caption}
@@ -118,6 +123,13 @@
 \newcommand{\NDeeplight}{\baselineNotation{base+neigh}\xspace}
 \newcommand{\SNDeeplight}{\baselineNotation{base+neigh+seg}\xspace}
 \newcommand{\PressLight}{\baselineNotation{PressLight}\xspace}
+\newcommand{\GCN}{\baselineNotation{GCN}\xspace}
+\newcommand{\NeighborRL}{\baselineNotation{NeighborRL}\xspace}
+\newcommand{\Maxband}{\expNotation{Maxband}\xspace}
+\newcommand{\MDeeplight}{\expNotation{CRL}\xspace}
+\newcommand{\MTDeeplight}{\expNotation{CTRL}\xspace}
+\newcommand{\LIT}{\baselineNotation{LIT}\xspace}
+
 % \newcommand{\PressLight}{\expNotation{CTRL}\xspace}
 
 \newcommand{\HeavyFlat}{{HeavyFlat}}
