Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -62,6 +62,11 @@
 \newcommand{\deepQNetwork}{Deep Q-Network\xspace}
 \newcommand{\dqn}{DQN\xspace}
 
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{example}[theorem]{Example}
+% \newtheorem{definition}[theorem]{Definition}
+
+
 %notations
 \newcommand{\notationFont}{\mathit}
 \newcommand{\notationVec}{\mathbf}
